git add --all .

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
 </head>
 <body id="collection-5a81023c53450a498144b8d7">
 	<div class="blog"></div>
+	<div class="Header Header--top"></div>
 <script src="../bundle.js"></script>	
 </body>
 </html>
